Fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html body{
   height:100vh;
-  width:100vw;
   background-image: radial-gradient(
     circle at right,
     #ff9a56,
